--- a/pom.xml
+++ b/pom.xml
@@ -25,16 +25,6 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.8.1</version>
         </dependency>
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-lambda-java-core</artifactId>
-            <version>1.2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.6</version>
-        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -51,7 +41,7 @@
                     <!-- MainClass in mainfest make a executable jar -->
                     <archive>
                         <manifest>
-                            <mainClass>example.Hello</mainClass>
+                            <mainClass>io.github.flauberjp.Generator</mainClass>
                         </manifest>
                     </archive>
 
