--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.8.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.10</version><!--$NO-MVN-MAN-VER$-->
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
