Renomeando classe Generator para EvidenceGenerator

--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
                     <!-- MainClass in mainfest make a executable jar -->
                     <archive>
                         <manifest>
-                            <mainClass>io.github.flauberjp.Generator</mainClass>
+                            <mainClass>io.github.flauberjp.EvidenceGenerator</mainClass>
                         </manifest>
                     </archive>
 
