Agora EvidenceGenerator é a main class do jar

--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
                     <!-- MainClass in mainfest make a executable jar -->
                     <archive>
                         <manifest>
-                            <mainClass>io.github.flauberjp.forms.FormMain</mainClass>
+                            <mainClass>io.github.flauberjp.EvidenceGenerator</mainClass>
                         </manifest>
                     </archive>
 
