#62: Bug: a versão esta sendo pega do pom.xml, qdo o programa é executado a partir de um jar, ele não funciona

--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,8 @@
                     <archive>
                         <manifest>
                             <mainClass>io.github.flauberjp.EvidenceGenerator</mainClass>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                         </manifest>
                     </archive>
 
