--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>io.github.flauberjp</groupId>
     <artifactId>my-git-usage-evidences</artifactId>
     <packaging>jar</packaging>
-    <version>1.6-SNAPSHOT</version>
+    <version>1.7-SNAPSHOT-beta.1</version>
     <name>my-git-usage-evidences</name>
     <url>https://github.com/flauberjp/my-git-usage-evidences</url>
 
