--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.flauberjp</groupId>
-    <artifactId>my-git-usage-evidences</artifactId>
+    <artifactId>g-evidences</artifactId>
     <packaging>jar</packaging>
     <version>1.7-SNAPSHOT-beta.1</version>
-    <name>my-git-usage-evidences</name>
-    <url>https://github.com/flauberjp/my-git-usage-evidences</url>
+    <name>g-evidences</name>
+    <url>https://github.com/flauberjp/g-evidences</url>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jar.finalName>${project.name}</jar.finalName>
     </properties>
